# SighFar

./: Cargo.toml  Package.resolved  Package.swift  README.md
.github/workflows/: build.yml  ci.yml
Sources/SighFar/: App.swift  CipherPipeline.swift  HistoryStore.swift  SecureEnvelope.swift  SighFar.swift  TerminalUI.swift
Sources/SighFarCore/: App.swift  HistoryStore.swift  Models.swift  PlatformPaths.swift  SecureEnvelope.swift  TechniqueParser.swift  TerminalCapabilities.swift  TerminalUI.swift
Tests/SighFarTests/: CipherPipelineTests.swift  HistoryStoreTests.swift  PlatformPathsTests.swift  SecureEnvelopeTests.swift  TechniqueParserTests.swift  TerminalCapabilitiesTests.swift
src/: app.rs  carrier.rs  cipher.rs  config.rs  core.rs  github_sync.rs  gui.rs  history.rs  keys.rs  main.rs  models.rs  secure.rs  ui.rs
