[package]
name = "sighfar"
version = "0.1.0"
edition = "2024"
description = "Offline cipher workbench prototype with a retro terminal shell"
license = "MIT"

[dependencies]
aes-gcm = "0.10"
anyhow = "1"
argon2 = "0.5"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
eframe = { version = "0.33", default-features = true }
egui = "0.33"
rand = "0.9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
